--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Amirah Azman - Portfolio</title>
+    <script type="module" src="/src/main.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
-  <script type="module" src="/src/main.js"></script>
-</head>
-
-<body>
-  <div id="app"></div>
-
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
